--- a/expose.tex
+++ b/expose.tex
@@ -183,48 +183,48 @@
 
 % PROBLEM STATEMENT %
 \section{Problem Statement}
-The market for mobile phone and tablet applications (apps) is growing extensively since recent years.
+The market for mobile phone and tablet applications (apps) grows extensively since recent years.
 It is increasingly easier for companies or even single developers to create unique apps that reach millions of users around the planet via digital app stores.\footnote{Previous two sentences following \cite{Enck2011}, p. 1.}
 This market growth affected mobile health (\acs{mHealth}) apps as well. 
-More and more \mH apps are available that support the users in resolving their health-related issues and that try to remedy information deficiencies. 
+More and more \mH apps are available that support the users in resolving their health-related issues and that try to remedy health-related information deficiencies. 
 % this has an effect on the users as well %
+%In order for users to receive a tailored information experience regarding their health stiation, they are
+Receiving health-related information does not come at no costs for the users.
+Users are asked to expose their personal health-related information in order to receive a tailored app that fits their preferences.\footnote{See \cite{Chen2012}, p. 2.}
+Users reveal vulnerable information about their health status while it remains mostly unclear how and where the data is sent, processed and stored.\footnote{See \cite{He2014}, p. 652.}
 
-Users are asked to expose their personal health related information, in order to receive a tailored app that fits their preferences.\footnote{See \cite{Chen2012}, p. 2.}
-The users reveal vulnerable information about their health status, while it remains mostly unclear how and where the data is sent, processed and stored.\footnote{See \cite{He2014}, p. 652.}
-
-The information about these privacy related practices of app providers and their offered apps should be stated in the privacy policy document, provided by the app provider.
+The information about these privacy related practices of app providers and their offered apps should be stated in the privacy policy document, provided by the app provider.\footnote{This paragraph follows \cite{Dehling2014}, p. 11.}
 Processing these \pps requires a higher level of education and time to read through large bodies of text, in order to find the relevant information. 
-Additionally, the important information is hidden in legal language or is  insufficiently addressed, if at all.\footnote{This paragraph follows \cite{Dehling2014}, p. 11.}
-
-Aside from the data usage beyond the control of the users, it is also challenging for users to assess what kind of private information an app asks for, prior to the app usage. 
+Additionally, the important information is hidden in legal language or is  insufficiently addressed, if at all.
+Aside from data usage beyond the control of the users, it is also challenging for users to assess what kind of private information an app asks for, prior to the app usage. 
 Users have to download the apps of interest and try them out, before it becomes clear what health related information is processed by the app and in what way. 
-This leads to low inter comparability between apps. 
-If users are looking for specific functionality in an \mH app, it is challenging to find the app that offers the desired functionality at an acceptable privacy risk. 
-Even if users would pursue the task of finding and comparing \mH apps of similar functionality, the high volume of apps available on the app stores\footnote{See \cite{Enck2011}, p. 1.} makes it laborious to review all of them by hand.
+This leads to low comparability between apps. 
+When users are looking for specific functionality in an \mH app, it is challenging to find the app that offers the desired functionality at an acceptable privacy risk. 
+Even if users would pursue the task of finding and comparing \mH apps of similar functionality, the high volume of apps available in the app stores\footnote{See \cite{Enck2011}, p. 1.} makes it laborious to review all of them by hand.
 One way to assess privacy risks of the large amount of \mH apps is to automate the review process of each individual app. 
 The assessment automation can be done by downloading and analyzing the source code of each app and by tracing data leaks. 
 \Sca is used in the field of informatics to analyse application source code and detect faults or vulnerabilities.\footnote{See \cite{Baca2008}, p. 79.} 
-A \sca could, in theory, be used to automatically assess some of the privacy risks that \mH apps pose.
 It is yet unclear if and to what degree the concepts of \sca and \pra can be combined in order to automate the app assessment.
-Previous research has not shown if the combination of \sca is feasible in the field of \mH app \pra and therefore the aim of this study is to explore the possibilities of static code analysis. 
+A \sca could, in theory, be used to automatically assess some of the privacy risks that \mH apps pose.
+Previous research has not shown if the combination of \sca is feasible in the field of \mH app \pra and therefore the aim of this study is to explore the possibilities of static code analysis for privacy risk assessment. 
 This leads to the research question of this master thesis: How and to what degree can the privacy risk assessment of mHealth apps be automated?
 
-The automated process furthermore helps to reduce the costs of reviewing each individual app drastically and enhances the information experience users receive while researching mHealth apps.Additionally, it exposes new possibilities for research in the privacy risk area. The research could be conducted on providing solutions and best practices for minimizing the privacy risk of apps.
+The automated process furthermore helps to drastically reduce the costs of reviewing each individual app and enhances the information experience users receive while looking for mHealth apps.Additionally, it exposes new possibilities for research in the privacy risk area. The research could be conducted on providing solutions and best practices for minimizing the privacy risk of apps.
 
 % RELATED WORK %
 \section{Related Work}
 \mH apps have been examined in various research studies that aim at providing insights for developers as well as users into how private information is processed.
-Privacy issues are the number one most impactful user complaint while using mobile apps.\footnote{See \cite{Khalid2015}, p. 5.}
+Privacy issues are the most impactful user complaint while using mobile apps.\footnote{See \cite{Khalid2015}, p. 5.}
 This encourages research to address privacy risks and data leaks.
 
-The technical side of data leaks has been studied extensively. 
-An analysis of \mH data storage in internal Android log files or the memory card used within the phone or tablet has been conducted. \footnote{For the previous two sentences, see \cite{He2014}, p. 645-646.}
+The technical side of data leaks has been extensively studied. 
+An analysis of \mH data storage in internal Android log files or the memory card used within the phone or tablet has been conducted.\footnote{For the previous two sentences, see \cite{He2014}, p. 645-646.}
 Technical evaluation of mobile apps even goes further into the topics of decompilation to analyze device identification or geolocation data leaks.\footnote{See \cite{Mcclurg2012}, p. 1, 5., \cite{Enck2011}, p. 1. and \cite{Mitchell2013}, p.6-7.}
 Decompilation reveals to be a feasible assessment technique for privacy risks and data leaks.
 
-In informatics and software development contexts, \sca has been used to analyze source code and provide feedback on coding styles to the users ('linting') while programming or "to find defects in programs"\footnote{\cite{Bardas2010}, p. 1.}
+In informatics and software development contexts, \sca has been used to analyze source code and provide feedback on coding styles to the users  while programming or "to find defects in programs"\footnote{\cite{Bardas2010}, p. 1.}.
 \Sca provides a fast way to analyze source code\footnote{See \cite{Bardas2010}, p. 5.}, which makes it suitable to automate the analysis on large datasets.
-\Sca has been used in the context of mobile apps to trace the leakage of device features, such as the location data and phone identifier before.\footnote{See \cite{Kim2012}, p. 1-2.}
+\Sca has been used in the context of mobile apps to trace the leakage of device features, such as the location data and phone identifier.\footnote{See \cite{Kim2012}, p. 1-2.}
 
 Our study will combine the decompilation steps of \cite{Enck2011} with a detailed static code analysis that \cite{Kim2012} proposed and apply this on the automated identification of the privacy risk factors which \cite{Bruggemann2016} identified.
 \cite{Bruggemann2016} identified six factors of privacy risk within \mH apps and proposed a formula to combine those factors into an equation.
@@ -238,7 +238,7 @@ The main objective of this study is to ascertain how and to what degree the asse
 In order to reach this objective, the following sub-objectives have to be met.
 
 The first sub-objective is to download and decompile as many Android apps as possible. This step is necessary to gain access to the app source code for further evaluation.
-After decompilation, the second sub-objective is to apply \sca to identify \prfs within the apps' source code. It is yet unclear if and to what degree \sca can be used to identify \prfs of \mH apps.
+After decompilation, the second sub-objective is to apply \sca to identify \prfs within the apps' source code.
 As a third sub-objective of this study, an evaluation of the privacy risk assessment tool, including an overview of the users’ opinions regarding the potential impact of the tool on their mHealth app decision making, will be given.
 
 % DEFINITIONS %
@@ -284,7 +284,7 @@ These approaches involve unlocking and jailbreaking\footnote{Jailbreaking refers
 an Apple iPhone or iPad, which is a violation of the Apple terms of service and therefore forbidden.\footnote{See \cite{Kweller2010}, p. 1.}
 
 The Google PlayStore on the other hand hosts Android application in \acs{APK} containers that are non-encrypted and allow for decompilation back into the original source files. 
-In order to automate the download process of \acs{APK} files to our local computer, we make use of an undocumented Google \acs{API} that reveals access to the \acs{APK} files from the Google PlayStore. 
+In order to automate the download process of \acs{APK} files, we make use of an undocumented Google \acs{API} that reveals access to the \acs{APK} files from the Google PlayStore. 
 The \acs{API} can be queried by sending an Android device id, pretending to be a requesting Android device. It is used by the Google PlayStore internally and the result of the query is the binary \acs{APK} file.
 
 To get an overview of the APK files available on the Google PlayStore, we use the repository of app listings by \cite{Xu2015} that was extracted from the Google PlayStore from the categories 'Health \& Fitness' and 'Medical'.
@@ -294,9 +294,9 @@ We exclude paid apps from our study. Downloading paid apps would charge the cred
 Downloading all 5,379 apps would result in a purchase value of 19,904.24 US-dollars. 
 Therefore, we reduce the dataset to the 3,180 free apps, which is still 59.1\% of the apps from the initial dataset. 
 We will download as many of these 3,180 apps as possible.
-Download limitations could arise from the fact that Google blocks requests on the API as soon as the system detects heavy use or misuse. 
-Downloading 3,180 apps in a short period of time will likely trigger these security mechanisms since a normal user could never download that many apps in the same timeframe from the PlayStore.
-A careful download rate implementation is necessary.
+%Download limitations could arise from the fact that Google blocks requests on the API as soon as the system detects heavy use or misuse. 
+Downloading 3,180 apps in a short period of time triggers Googles security mechanisms, since a normal user could never download that many apps in the same timeframe from the PlayStore.
+We will apply a careful downloading technique and allow for pauses in between app downloads to not over-use the Google API.
 
 As soon as the \acs{APK} files are available offline, the decompiling phase of the study will begin.
 Our decompiling process consists of four steps.
@@ -312,7 +312,7 @@ A .java file contains exactly one Java \textit{class} in human-readable Java cod
 \cite{Enck2011} developed their own Java decompiling toolchain in order to assess security issues of \mH apps, since \textit{dex2jar} was not functioning at the time they conducted their study.\footnote{See \cite{Enck2011}, p. 16.}
 Within their toolchain, they used a tool called \textit{Soot}.
 \textit{Soot} optimizes the decompiled code to improve the readability by humans.
-Aside from using \textit{Soot}, \cite{Enck2011} propose the idea to use different Android decompiler tools, such as \textit{JD} or \textit{FernFlower} in future research, since \textit{Soot} did not perform well in all cases. \footnote{For the previous three sentences, see \cite{Enck2011}, p. 5.}
+%Aside from using \textit{Soot}, \cite{Enck2011} propose the idea to use different Android decompiler tools, such as \textit{JD} or \textit{FernFlower} in future research, since \textit{Soot} did not perform well in all cases. \footnote{For the previous three sentences, see \cite{Enck2011}, p. 5.}
 We will use \textit{FernFlower} as the decompiling tool for our study, since it evidentially outperformed \textit{Soot} in a further evaluation by \cite{Enck2011}.\footnote{See \cite{Enck2011}, p. 6.}
 The result of this second step will be a directory full of .java files that represents the source code of the \acs{APK} apps.
 
@@ -375,7 +375,9 @@ This enables the \mH apps to be compared, regarding their privacy risk.
 \subsection{Evaluation}
 
 First, we want to evaluate the degree of privacy risk assessment automation that has been accomplished. 
-The evaluation will be based on the feasibility and obstacles detected in implementing the automated privacy risk assessment. We will outline which privacy risk factors can be detected automatically and which factors can not, as well as the reasons for this.
+The evaluation will be based on the feasibility and obstacles detected in implementing the automated privacy risk assessment. 
+We will outline which privacy risk factors can and can not be detected automatically, as well as the reasons for this.
+Furthermore, we will evaluate for which \prfs the automated \sca is superior to using manual assessment techniques.
 
 The \cite{Bruggemann2016} user interface allows users to explore and compare \mH apps in a table view format. 
 It can be used in addition to downloading apps from the Google PlayStore.
@@ -418,7 +420,7 @@ In this section we would like to introduce the structure of the final thesis cha
     
     4 Results &  How many apps could be automatically assessed? How many factors could be automatically identified? Was it possible to compute information on all of the privacy risk factors from chapter 2.1?\\\hline\hline
     
-    4.1 Privacy Risk Factors & Results on what privacy risk factors are identifiable via \sca\\\hline
+    4.1 Privacy Risk Factors & Results on what privacy risk factors are identifiable via static code analysis.\\\hline
     
     4.2 Implementation & Explaining the outcome of the implementation step. \\\hline
     
@@ -455,7 +457,7 @@ We expect the static code analysis for privacy risk factors to be successful for
 
 % PROBLEMS %
 \section{Problems}
-So far there are no problems.
+So far, there are no problems.
 
 % --------------------
 % REFERENCES
